Fixed alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -32,12 +32,19 @@ body {
 }
 
 #grid > div {
+  height: 220px;
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: 26px auto 26px;
+}
+
+label {
+  display: inline-block;
+  margin: auto 5px;
 }
 
 p, label {
   line-height: 26px;
+  height: 26px;
 }
 
 select {
@@ -46,9 +53,7 @@ select {
 
 textarea {
   box-sizing: border-box;
-  display: block;
   width: 100%;
-  height: 170px;
   padding: 4px;
   border: 2px solid #05c;
   border-radius: 5px;
@@ -60,9 +65,4 @@ textarea {
 select {
   width: 100px;
   text-align: center;
-}
-
-label {
-  display: inline-block;
-  margin: auto 5px;
 }
